--- a/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
+++ b/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record model="ir.ui.view" id="m0c0_account_reports_bank_reconcile_report_wizard">
-        <field name="name">Bank reconcile report wizard</field>
+    <record id="m0c0_account_reports_bank_reconcile_report_wizard" model="ir.ui.view">
+        <field name="name">Reporte de Conciliación Bancaria</field>
         <field name="model">m0c0.account.bank.reconcile.report.wizard</field>
-        <field name="type">form</field>
         <field name="inherit_id" ref="account.account_common_report_view" />
+        <field name="type">form</field>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='target_move']" position="replace"/>
             <xpath expr="//field[@name='journal_ids']" position="replace"/>
@@ -26,13 +26,13 @@
     </record>
 
     <record id="m0c0_account_reports_action_bank_reconcile_report_wizard" model="ir.actions.act_window">
-        <field name="name">Bank reconcile report wizard</field>
+        <field name="name">Reporte de Conciliación Bancaria</field>
         <field name="res_model">m0c0.account.bank.reconcile.report.wizard</field>
-        <field name="view_type">form</field>
         <field name="view_id" ref="m0c0_account_reports_bank_reconcile_report_wizard"/>
+        <field name="view_type">form</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
     </record>
 
-    <menuitem name="Bank reconcile" action="m0c0_account_reports_action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent="account.menu_finance_legal_statement" sequence="1"/>
+    <menuitem name="Conciliación Bancaria" action="m0c0_account_reports_action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent="account.menu_finance_legal_statement" sequence="1"/>
 </odoo>
