--- a/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
+++ b/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
@@ -33,5 +33,5 @@
         <field name="target">new</field>
     </record>
 
-    <menuitem name="Conciliación Bancaria" action="m0c0_account_reports_action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent="account.menu_finance_legal_statement" sequence="1"/>
+    <menuitem name="Conciliación Bancaria" action="m0c0_account_reports_action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent_id="account.menu_finance_legal_statement" sequence="1"/>
 </odoo>
