--- a/m0c0_account_reports/views/bank_reconcile_report_template.xml
+++ b/m0c0_account_reports/views/bank_reconcile_report_template.xml
@@ -1,12 +1,12 @@
 <odoo>
-    <report id="bank_reconcile_report"
-            model="bank_reconcile.report.wizard"
+    <report id="m0c0_account_reports_bank_reconcile_report"
+            model="m0c0.account.bank.reconcile.report.wizard"
             string="Bank reconcile report"
             report_type="qweb-pdf"
-            name="m0c0_account_reports.bank_reconcile_report_view"
+            name="Reporte de Consilación Bancaria"
             menu="True"/>
 
-    <template id="bank_reconcile_report_view">
+    <template id="m0c0_account_reports_bank_reconcile_report_view">
         <t t-call="web.html_container">
             <t t-call="web.external_layout">
                 <div class="page">
