--- a/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
+++ b/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
@@ -34,6 +34,10 @@
             <field name="target">new</field>
         </record>
 
-        <menuitem name="reports.bank.reconcile.report" action="m0c0_account_reports_action_bank_reconcile_report_wizard" id="m0c0_account_reports_menu_action_bank_reconcile_report" parent_id="account.menu_finance_legal_statement" sequence="1"/>
+        <menuitem id="m0c0_account_reports_menu_action_bank_reconcile_report" 
+                  name="reports.bank.reconcile.report" 
+                  sequence="20"
+                  action="m0c0_account_reports_action_bank_reconcile_report_wizard" 
+                  parent="account.menu_finance_reports" />
     </data>
 </odoo>
