--- a/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
+++ b/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
@@ -36,8 +36,9 @@
 
         <menuitem id="m0c0_account_reports_menu_action_bank_reconcile_report" 
                   name="reports.bank.reconcile.report" 
-                  sequence="30"
+                  sequence="1"
                   action="m0c0_account_reports_action_bank_reconcile_report_wizard" 
-                  parent="accounting_pdf_reports.menu_finance_partner_reports" />
+                  parent="accounting_pdf_reports.menu_finance_partner_reports"
+                  groups="account.group_account_user" />
     </data>
 </odoo>
