--- a/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
+++ b/m0c0_account_reports/wizard/bank_reconcile_report_wizard_views.xml
@@ -39,6 +39,6 @@
                   sequence="0"
                   action="m0c0_account_reports_action_bank_reconcile_report_wizard" 
                   parent="accounting_pdf_reports.menu_finance_audit_reports"
-                  groups="account.group_account_user,account.group_account_manager" />
+                  groups="account.group_account_user" />
     </data>
 </odoo>
