Incorporando alerta de respaldo en los cierres (5)

--- a/m0c0_account_overrides/views/fiscal_year_change_lock_date_backup_remainder.xml
+++ b/m0c0_account_overrides/views/fiscal_year_change_lock_date_backup_remainder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="backup_remainder_fiscal_lock_date_override" name="Recordatorio de Respaldo en Cierres Contables" inherit_id="om_fiscal_year.view_change_lock_date">
-        <xpath expr="//form" position="before">
+        <xpath expr="//sheet" position="before">
             <div class="alert alert-warning">
                 <h4 class="alert-heading">Importante!</h4>
                 <p>Recuerde realizar una salva del sistema antes de realizar esta operación, como respaldo ante elementos que por aguna situación no planificada no se hayan incorporado y así se requiera.</p>
