--- a/m0c0_account_invoicing/views/account_invoice_signblocks.xml
+++ b/m0c0_account_invoicing/views/account_invoice_signblocks.xml
@@ -66,7 +66,7 @@
                     </p>
                 </div>
             </div>
-            <p class="mb-1 mt-1"><strong>Transportado por</strong></p>
+            <p class="mb-1 mt-2"><strong>Transportado por</strong></p>
             <div class="row">
                 <div class="col-4">
                     <p class="input-space">&amp;nbsp;</p>
@@ -95,7 +95,9 @@
                     </p>
                     <p class="input-space">&amp;nbsp;</p>
                 </div>
-                <div>
+            </div>
+            <div class="row">
+                <div class="col-4">
                     <p class="signature-space">&amp;nbsp;</p>
                     <p class="mb-0 small text-muted" style="border-top: dashed 1px black;">
                     <i>Firma</i>
