--- a/m0c0_account_invoicing/views/account_invoice_signblocks.xml
+++ b/m0c0_account_invoicing/views/account_invoice_signblocks.xml
@@ -66,7 +66,7 @@
                     </p>
                 </div>
             </div>
-            <p class="mb-1 mt-2"><strong>Transportado por</strong></p>
+            <p class="mb-1 mt-3"><strong>Transportado por</strong></p>
             <div class="row">
                 <div class="col-4">
                     <p class="input-space">&amp;nbsp;</p>
@@ -98,7 +98,7 @@
             </div>
             <div class="row">
                 <div class="col-4">
-                    <p class="signature-space">&amp;nbsp;</p>
+                    <p style="font-size: 2rem;margin-top: 0.4rem;">&amp;nbsp;</p>
                     <p class="mb-0 small text-muted" style="border-top: dashed 1px black;">
                     <i>Firma</i>
                     </p>
