--- a/Resilient/m0c0_shared/views/res_partner_views.xml
+++ b/Resilient/m0c0_shared/views/res_partner_views.xml
@@ -17,20 +17,7 @@
             <field name="priority" eval="50"/>
             <field name="arch" type="xml">
                 <field name="name" position="after">
-                    <field name="short_name" placeholder="Alias"
-                           attrs="{'invisible': [('is_company', '=', False)]}"/>
-                </field>
-                <field name="parent_id" position="replace">
-                    <field name="rating_id" placeholder="hierarchy level"
-                           attrs="{'invisible': [('is_company', '=', False)], 'required': [('is_company', '=', True)]}"
-                           options='{"no_open": True, "no_create": True}'/>
-                    <field name="parent_id"
-                           placeholder="Company"
-                           domain="[('is_company', '=', True)]"
-                           context="{'default_is_company': True, 'default_supplier': supplier, 'default_customer': customer}"/>
-                </field>
-                <field name="parent_id" position="attributes">
-                    <attribute name="attrs">{'invisible': [('rating_id', '&lt;=', 1)]}</attribute>
+                    <field name="short_name" placeholder="Alias" attrs="{'invisible': [('is_company', '=', False)]}" />
                 </field>
                 <field name="city" position="after">
                     <field name="municipality" class="o_address_state" placeholder="Municipality"
