--- a/Resilient/m0c0_account_accounting/views/res_config_settings_views.xml
+++ b/Resilient/m0c0_account_accounting/views/res_config_settings_views.xml
@@ -5,7 +5,7 @@
         <field name="model">res.config.settings</field>
         <field name="inherit_id" ref="account.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <div data-key="account_invoicing" position="attributes">
+            <div data-key="account" position="attributes">
                 <attribute name="data-string">Accounting</attribute>
             </div>
             <div id="fiscalyear" position="replace">
