Solucionando problema en la instalación (17)

--- a/Resilient/m0c0_account_accounting/wizard/account_change_lock_date.xml
+++ b/Resilient/m0c0_account_accounting/wizard/account_change_lock_date.xml
@@ -10,6 +10,7 @@
                         <group>
                             <field name="period_lock_date"/>
                             <field name="fiscalyear_lock_date"/>
+                            <label class="text-danger"><b>Before changing this date: You should have made a save of database and have issued the financial statements before closing period</b></label>
                         </group>
                     </sheet>
                     <footer>
