--- a/Resilient/m0c0_account/wizard/views/bank_reconcile_report_wizard_view.xml
+++ b/Resilient/m0c0_account/wizard/views/bank_reconcile_report_wizard_view.xml
@@ -33,5 +33,5 @@
         <field name="view_mode">form</field>
         <field name="target">new</field>
     </record>
-    <menuitem name="Bank reconcile" action="action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent="account.menu_finance_legal_statement" sequence="1"/>
+    <menuitem name="Conciliación Bancaria" action="action_bank_reconcile_report_wizard" id="menu_action_bank_reconcile_report" parent="accounting_pdf_reports.menu_finance_legal_statement" sequence="1"/>
 </odoo>
