--- a/Resilient/l10n_cu_reports/views/account_views.xml
+++ b/Resilient/l10n_cu_reports/views/account_views.xml
@@ -3,7 +3,7 @@
     <record id="view_account_financial_report_form_inherit" model="ir.ui.view">
         <field name="name">view.account.financial.report.form.inherit</field>
         <field name="model">account.financial.report</field>
-        <field name="inherit_id" ref="account.view_account_financial_report_form"/>
+        <field name="inherit_id" ref="accounting_pdf_reports.view_account_financial_report_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page string="General">
@@ -15,10 +15,10 @@
                 </page>
             </xpath>
             <xpath expr="//notebook" position="attributes">
-                <attribute name="attrs">{'invisible': [('type','not in',['accounts','account_type', 'account_report', 'account_reports'])]}</attribute>
+                <attribute name="attrs">{'invisible': [('type','not in',['accounts','account_type', 'account_report'])]}</attribute>
             </xpath>
             <xpath expr="//notebook/page/group" position="inside">
-                <field name="account_report_ids" attrs="{'invisible': [('type', '!=', 'account_reports')]}"/>
+                <field name="account_report_ids" attrs="{'invisible': [('type', '!=', 'account_report')]}"/>
             </xpath>
         </field>
     </record>
